# HorizonEngine

./: .gitignore  CMakeLists.txt  CMakePresets.json  CODE_OF_CONDUCT.md  LICENSE  README.md  SECURITY.md  _repro_inc_out.txt  build_errors.txt  configure_x64.bat  imgui.ini
src/HE_Core/: CMakeLists.txt
src/HE_Core/include/: HorizonCore.h  IGameLogic.h  SlotMap.h
src/HE_Core/include/AnimatorStateMachine/: AnimatorStateMachineGraph.h
src/HE_Core/include/Application/: Application.h  GameLogicLoader.h  GameLoop.h  Input.h  InputAssets.h  InputMapping.h
src/HE_Core/include/ContentManager/: Assets.h  ContentManager.h  DefaultAssets.h  HAsset.h
src/HE_Core/include/DebugDraw/: DebugDraw.h
src/HE_Core/include/Diagnostics/: CrashHandler.h  DiagnosticsStructs.h  EngineProfiler.h  GlobalState.h  Logger.h  Profiler.h
src/HE_Core/include/Events/: EventBus.h
src/HE_Core/include/HorizonCode/: HcCompiledLoader.h  HorizonCode.h  HorizonCodeCompiled.h  HorizonCodeGenSupport.h  HorizonCodeRuntime.h
src/HE_Core/include/Hpak/: Aes256Gcm.h  HpakFormat.h  HpakReader.h  HpakWriter.h  KeyDerivation.h  ProjectConfig.h  ProjectExporter.h
src/HE_Core/include/JobSystem/: JobSystem.h
src/HE_Core/include/MaterialGraph/: MaterialGraph.h
src/HE_Core/include/Math/: AABB.h
src/HE_Core/include/Memory/: Ref.h
src/HE_Core/include/ParticleGraph/: ParticleGraph.h
src/HE_Core/include/Platform/: DynLib.h
src/HE_Core/include/Renderer/: GpuPassAccumulator.h  IRenderer.h  RendererFactory.h  UIFont.h  UIRenderObject.h
src/HE_Core/include/Scripting/: IScriptBackend.h  ScriptEngine.h  ScriptTypes.h
src/HE_Core/include/Types/: Defines.h  Enums.h  Handle.h  UUID.h
src/HE_Core/include/UIWidget/: UIElement.h  UIElements.h  UIWidgetBinding.h  UIWidgetGraph.h  UIWidgetTree.h
src/HE_Core/include/Window/: Window.h
src/HE_Core/src/AnimatorStateMachine/: AnimatorStateMachineGraph.cpp
src/HE_Core/src/Application/: Application.cpp  GameLogicLoader.cpp  GameLoop.cpp  Input.cpp  InputAssets.cpp  InputMapping.cpp
src/HE_Core/src/ContentManager/: ContentManager.cpp
src/HE_Core/src/Diagnostics/: CrashHandler.cpp  EngineProfiler.cpp  GlobalState.cpp  Logger.cpp  Profiler.cpp
src/HE_Core/src/Events/: EventBus.cpp
src/HE_Core/src/HorizonCode/: HcCompiledLoader.cpp  HorizonCode.cpp  HorizonCodeCompiled.cpp  HorizonCodeGenSupport.cpp  (+1 more)
src/HE_Editor/: AnimatorStateMachineEditorPanel.cpp  AnimatorStateMachineEditorPanel.h  CMakeLists.txt  CppClassEditorPanel.cpp  CppClassEditorPanel.h  EditorApplication.cpp  EditorApplication.h  EditorCamera.cpp  EditorCamera.h  EditorUI.cpp  EditorUI.h  EditorUndo.cpp  EditorUndo.h  GameInstancePanel.h  GraphEditor.cpp  GraphEditor.h  HcClassList.cpp  HcClassList.h  HorizonCodeClassPanel.h  ImGuiMetalBridge.h  ImGuiMetalBridge.mm  InputAssetPanel.cpp  InputAssetPanel.h  LevelScriptPanel.cpp  LevelScriptPanel.h  MacMenuBar.h  MacMenuBar.mm  MaterialEditorPanel.cpp  MaterialEditorPanel.h  ParticleGraphEditorPanel.cpp  ParticleGraphEditorPanel.h  ScriptEditorPanel.cpp  ScriptEditorPanel.h  SkeletalMeshEditorPanel.cpp  SkeletalMeshEditorPanel.h  UIEditorPanel.cpp  UIEditorPanel.h  main.cpp
src/HE_Game/: CMakeLists.txt
src/HE_Game/src/: EmbeddedPakKey.cpp  EmbeddedPakKey.h  GameApplication.cpp  GameApplication.h  ProjectConfig.cpp  ProjectConfig.h  main.cpp
src/HE_Net/: CMakeLists.txt
src/HE_Net/src/: LoopbackTransport.cpp  NetSession.cpp
src/HE_Rendering/: CMakeLists.txt
src/HE_Rendering/include/: HE_RENDERING_API.h  IRenderer.h
src/HE_Rendering/shaders/: debug_line.frag  debug_line.vert  debug_line.vert.spv  gi_blur.frag  gi_gbuf.frag  gi_gbuf.vert  gi_probe.comp  gi_probe_hw.comp  gi_probe_hw.hlsl  gi_shadow.comp  gi_shadow_hw.comp  gi_shadow_hw.hlsl  gi_temporal.frag  postfx.vert  postfx_bloom_blur.frag  postfx_bloom_bright.frag  postfx_fxaa.frag  postfx_tonemap.frag  scene.frag  scene.frag.spv  scene.vert  scene_instanced.vert  scene_shadow.vert  skinned.vert  sky.frag  sky.frag.spv  sky.vert  sky.vert.spv  ssao.frag  ssao_blur.frag  ssao_pos.frag  ssao_pos.vert  ui.frag  ui.vert
src/HE_Rendering/src/: CommandBuffer.cpp  FrustumCuller.cpp  GPUMemoryAllocator.cpp  GiBvh.cpp  IRenderer.cpp  RenderExtractor.cpp  RenderGraph.cpp  RenderPass.cpp  RenderResourceManager.cpp  RenderSorter.cpp  RenderWorld.cpp  RendererFactory.cpp
src/HE_Scene/: CMakeLists.txt
src/HE_Scene/src/: AnimationBlendSystem.cpp  AnimationEval.cpp  AnimationEval.h  AnimationPreview.cpp  AnimationStateMachineSystem.cpp  AnimationSystem.cpp  AudioEngine.cpp  EngineApi.cpp  FoliageSystem.cpp  GameInstanceHost.cpp  HcCodegen.cpp  HorizonWorld.cpp  LODSystem.cpp  NavigationSystem.cpp  ParticleSystem.cpp  PhysicsWorld.cpp  PlayerHost.cpp  PropertyAnimationSystem.cpp  PyScriptBackend.cpp  SceneGraph.cpp  SceneSerializer.cpp  SceneSystems.cpp  ScriptApi.cpp  ScriptContext.cpp  TerrainMeshGenerator.cpp  TerrainSystem.cpp  UIInputSystem.cpp  UISystem.cpp  UIWidgetInstantiator.cpp  WeatherSystem.cpp  WidgetManager.cpp
src/HE_Tools/: CMakeLists.txt
src/HE_Tools/ShaderCompiler/: ShaderCompiler.cpp  ShaderCompiler.h  spike_main.cpp
tests/: CMakeLists.txt  TestFsUtil.h  test_animationsystem.cpp  test_animator_state_machine_graph.cpp  test_async_streaming.cpp  test_audio.cpp  test_character.cpp  test_collider.cpp  test_collision_system.cpp  test_contentmanager.cpp  test_cpp_scaffold.cpp  test_crash_handler.cpp  test_culling.cpp  test_debug_draw.cpp  test_editorcamera.cpp  test_engine_api.cpp  test_eventbus.cpp  test_export_profiles.cpp  test_foliage.cpp  test_game_instance.cpp  test_gamelogic_loader.cpp  test_gi_bvh.cpp  test_hasset.cpp  test_hccompiled_loader.cpp  test_horizoncode_codegen.cpp  test_horizoncode_compiled.cpp  test_horizoncode_runtime.cpp  test_hpak.cpp  test_inputmapping.cpp  test_jobsystem.cpp  test_level_script.cpp  test_lod.cpp  test_material_graph.cpp  test_navigation.cpp  test_net_bitstream.cpp  test_net_loopback.cpp  test_particle_graph.cpp  test_particles.cpp  test_physics.cpp  test_postfx.cpp  (+19 more)
tests/fixtures/: test_gamelogic.cpp
tests/fixtures/hcodegen/: fixtures.h
(+213 files in other folders)
